--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "firebase": "^12.5.0",
     "lottie-react": "^2.4.1",
     "react": "^19.2.0",
     "react-countup": "^6.5.3",
